# llm-sentinel

./: README.md  pyproject.toml
llm_sentinel/: __init__.py  alerter.py  config.py  logger.py  models.py
tests/: __init__.py  conftest.py  test_alerter.py  test_detector.py  test_logger.py  test_models.py  test_proxy.py
