[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_sentinel"
version = "0.1.0"
description = "A Python middleware library that wraps LLM API clients to detect, log, and alert on prompt injection and jailbreak attempts in real time."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "LLM Sentinel Contributors" }
]
keywords = ["llm", "security", "prompt-injection", "jailbreak", "middleware", "openai", "anthropic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.0",
  "httpx>=0.27",
  "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/example/llm_sentinel"
Repository = "https://github.com/example/llm_sentinel"
Issues = "https://github.com/example/llm_sentinel/issues"

[tool.hatch.build.targets.wheel]
packages = ["llm_sentinel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
